src/test/deca/context/invalid/class/heritage/inherit_int.deca
// Description:
//    Déclaration de classe héritant de int
//
// Resultats:
//    undefined supeclass
// 
// Historique:
//    cree le 01/01/2016

class C extends int {

}

{

}
